Postgres GKE CI/CD setup

--- a/.github/workflows/eploy-postgres-gke.yml
+++ b/.github/workflows/eploy-postgres-gke.yml
@@ -7,38 +7,65 @@ on:
 
 jobs:
   deploy:
+    name: Deploy PostgreSQL to GKE
     runs-on: ubuntu-latest
 
     steps:
+    # ------------------------
+    # Step 1: Checkout Code
+    # ------------------------
     - name: Checkout code
       uses: actions/checkout@v4
 
+    # ------------------------
+    # Step 2: Authenticate to GCP
+    # ------------------------
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
         credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+    # ------------------------
+    # Step 3: Setup Google Cloud SDK
+    # ------------------------
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
       with:
         project_id: modern-saga-472703-k3
         export_default_credentials: true
 
+    # ------------------------
+    # Step 4: Install GKE Auth Plugin
+    # ------------------------
     - name: Install GKE auth plugin
       run: |
         gcloud components install gke-gcloud-auth-plugin --quiet
         echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
 
+    # ------------------------
+    # Step 5: Connect to GKE Cluster
+    # ------------------------
     - name: Get GKE credentials
       run: |
         gcloud container clusters get-credentials test-demo-cluster \
-          --zone us-central1-a --project modern-saga-472703-k3
+          --zone us-central1-a \
+          --project modern-saga-472703-k3
 
+    # ------------------------
+    # Step 6: Deploy PostgreSQL
+    # ------------------------
     - name: Deploy PostgreSQL to GKE
       run: |
         kubectl apply -f k8s/postgres-configmap.yaml --validate=false
         kubectl apply -f k8s/postgres-secret.yaml --validate=false
+        kubectl apply -f k8s/postgres-pvc.yaml --validate=false
         kubectl apply -f k8s/postgres-deployment.yaml --validate=false
         kubectl apply -f k8s/postgres-service.yaml --validate=false
+
+    # ------------------------
+    # Step 7: Verify Deployment
+    # ------------------------
+    - name: Verify deployment
+      run: |
         kubectl get pods
         kubectl get svc
