--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline - PostgreSQL on GKE
+name: CI/CD Pipeline - PostgreSQL on GKE (No Custom Build)
 
 on:
   push:
@@ -21,14 +21,14 @@ jobs:
         uses: actions/checkout@v4
 
   dependencies:
-    name: Install Dependencies
+    name: Install Linting & Security Tools
     runs-on: ubuntu-latest
     needs: checkout
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install Linting & Security Tools
+      - name: Install Tools
         run: |
           sudo apt-get update -y
           sudo apt-get install -y yamllint
@@ -64,54 +64,6 @@ jobs:
           echo "Running Trivy config scan on k8s manifests..."
           trivy config k8s/ || true
 
-  build:
-    name: Build PostgreSQL Image
-    runs-on: ubuntu-latest
-    needs: trivy_config_scan
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Configure Docker to use gcloud as a credential helper
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
-
-      - name: Build Docker Image
-        run: |
-          docker build -t us-central1-docker.pkg.dev/modern-saga-472703-k3/postgres-repo/postgres:latest .
-
-  trivy_image_scan:
-    name: Trivy Image Scan (Vulnerability Check)
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Install Trivy
-        run: |
-          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin
-
-      - name: Scan Docker Image for Vulnerabilities
-        run: |
-          echo "Scanning built image with Trivy..."
-          trivy image --exit-code 0 --severity HIGH,CRITICAL us-central1-docker.pkg.dev/modern-saga-472703-k3/postgres-repo/postgres:latest
-
-  push_artifacts:
-    name: Push Image to Artifact Registry
-    runs-on: ubuntu-latest
-    needs: trivy_image_scan
-    steps:
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Push Docker Image
-        run: |
-          docker push us-central1-docker.pkg.dev/modern-saga-472703-k3/postgres-repo/postgres:latest
-
   # --------------------------------------------------------
   # 🚀 CD SECTION
   # --------------------------------------------------------
@@ -119,7 +71,7 @@ jobs:
   deploy_gke:
     name: Deploy PostgreSQL to GKE
     runs-on: ubuntu-latest
-    needs: push_artifacts
+    needs: trivy_config_scan
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
